--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Task-MusicBundle
 
+0.03  2013-09-23
+    - Removed MetaResources in dist.ini
+    - Added Music::ChordBot
+
 0.02  2013-05-27
     - Added Music::NeoRiemannianTonnetz.
     - Added Music::Scala.
