--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Task-MusicBundle
 
+0.0301 2014-08-16
+    - Added Music::PitchNum to the POD only, as it fails to install without force :\
+
 0.03  2013-09-23
     - Removed MetaResources in dist.ini
     - Added Music::ChordBot
