--- a/Changes
+++ b/Changes
@@ -1,7 +1,10 @@
 Revision history for Task-MusicBundle
 
+0.04  2014-08-30
+    - Fixed POD
+
 0.0301 2014-08-16
-    - Added Music::PitchNum to the POD only, as it fails to install without force :\
+    - Added Music::PitchNum
 
 0.03  2013-09-23
     - Removed MetaResources in dist.ini
