--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Task-MusicBundle
 
+0.0501 2014-10-08
+    - Fixed inclusion of Music::PitchNum
+
 0.05  2014-09-27
     - Added Music::Intervals
 
